tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@infinite-recursion.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/infinite-recursion.txt
---
Maximum render recursion depth for components exceeded.
