tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@missing_implicit.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/missing_implicit.txt
---
error: Implicit argument `unknown` not found in context or passed directly.
 --> tpl:1:3
  |
1 | {{<show />}}
  |   ^^^^^^^^
