tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_errors@wrong_type_implicit.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/components/wrong_type_implicit.txt
---
error: Component argument `name` (type: `string`) does not match expected type: `number`
 --> tpl:1:3
  |
1 | {{<show />}}
  |   ^^^^^^^^
