tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@body_under_autoescape.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/body_under_autoescape.txt
---
<div><b>&lt;html&gt;</b></div>
