tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@default_args.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/default_args.txt
---
-1 -1.5 [1] [-1] -1
