tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@dotted_namespacing.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/dotted_namespacing.txt
---
<div class="page">
  <button class="btn btn-secondary">Click me</button>

  <label for="email">Email Address*</label>
<input type="text" name="email" required>

  <div class="advanced-widget">
  <h3>Advanced Settings</h3>
  
    <p>This is advanced content!</p>
  
</div>
</div>
