tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_components_ok@implicit_params_default.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&out"
input_file: tera/src/snapshot_tests/rendering_inputs/success/components/implicit_params_default.txt
---
hey
